# rmhd-gpu

./: .gitignore  README.md  pyproject.toml
.venv-local/: pyvenv.cfg
rmhdgpu/: __init__.py  backend.py  config.py  errors.py  fft.py  forcing.py  grid.py  io.py  masks.py  operators.py  run.py  state.py  steppers.py  utils.py  workspace.py
rmhdgpu/diagnostics/: __init__.py  alfvenic.py  fullfield.py  scalar.py  spectra.py
rmhdgpu/equations/: __init__.py  base.py  s09.py  s09_placeholder.py
rmhdgpu/examples/: __init__.py  frame_output.py  sanity_aw_packet.py  sanity_decay_spectra.py  sanity_forced_turbulence.py  sanity_single_mode_decay.py
rmhdgpu/initconds/: __init__.py  eigenmodes.py  eigenmodes_placeholder.py  random_modes.py
rmhdgpu/profiling/: __init__.py  benchmark_backends.py  gpu_sanity.py  profile_timestep.py
rmhdgpu/tests/: test_backend.py  test_cupy_backend.py  test_dissipation.py  test_equations_s09.py  test_example_scripts.py  test_fft.py  test_forced_runs.py  test_forcing.py  test_gpu_benchmarks.py  test_gpu_consistency.py  test_gpu_runtime_checks.py  test_grid.py  test_initconds.py  test_integrating_factor.py  test_invariants.py  test_linear_behavior.py  test_masks.py  test_operators.py  test_runtime_checks.py  test_scipy_backend.py  test_smoke.py  test_state.py  test_steppers.py  test_variable_timestep.py  test_workspace.py
